--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -7,5 +7,6 @@
     <dimen name="fab_elevation">2dp</dimen>
     <dimen name="fab_press_translation_z">6dp</dimen>
     <dimen name="fab_margin">24dp</dimen>
+    <dimen name="sheet_text_scrim_height_top">120dp</dimen>
 
 </resources>
