--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -16,10 +16,10 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
+        <com.example.xyzreader.ui.SquareImageView
             tools:src="@mipmap/ic_launcher"
             android:id="@+id/thumbnail"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
